2006-09-23  Derek Atkins  <derek@ihtfp.com>

	* src/ledger-core/split-register*.c:
	  suspend events around the Commit(). Fixes #347089 when combined
	  with r14495.

2006-09-19  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Remove mt940 module completely from the build and
	SVN because all of its functionality has been moved into the hbci
	(aqbanking) module.

2006-09-19  Andreas Köhler  <andi5.py@gmx.net>

	* $some.glade: Use some more automatic scrollbars.

	* src/backend/file/gnc-backend-file.c:
	* src/gnome-utils/gnc-file.c: Do not complain about non-existent
	  files if we save to a new file. In pass one we ignore the error
	  returned by stat and call qof_session_begin with
	  create_if_nonexistent=TRUE for a second run.

2006-09-18  Christian Stimming  <stimming@tuhh.de>

	* src/engine/binreloc.[hc], src/engine/gnc-path.c,
	src/bin/gnucash-bin.c, configure.in: Implement automatic
	relocation of previously compiled-in paths. With the exception of
	the env variables in src/bin/gnucash, we're fully relocatable now.

2006-09-13  Christian Stimming <stimming@tuhh.de>

	* src/import-export/hbci/gnc-plugin-hbci.c: Move the MT940
	importer action from the mt940 into the hbci plugin because in the
	hbci plugin everything is already there. From now on, MT940
	importing is available as soon as --enable-hbci is switched
	on. The mt940 plugin can be removed from SVN now.

2006-09-07  Christian Stimming  <stimming@tuhh.de>

	* src/engine/gnc-path.h, gnc-path.c: Add new file with utility
	functions to retrieve the needed directory paths. All compile-time
	vs. runtime path lookups will be implemented exactly in this file.

2006-09-07  David Hampton  <hampton@employees.org>

	* src/backend/postgres: Include config.h a couple of places.

	* src/engine/gnc-budget.c: Use the glib-compat.h file for backward
	compatible function names.

2006-09-03  Christian Stimming  <stimming@tuhh.de>

	* lib/libqof/qof/qofbackend.h, src/gnome-utils/gnc-file.c,